// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c4 {
  padding: 2rem;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c9 {
  display: none;
}

.c11 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c9 {
    display: inherit;
  }
}

<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="c0 c1"
    href="/blog/asdfg"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        <div
          aria-hidden="true"
          class="c5"
        >
          <div
            class="c6 date container"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="c9"
            >
              <span
                class="c8"
              >
                NaN
              </span>
            </div>
            <div
              class="c9"
            >
              <span
                class="c8"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="c10"
          >
            <h1
              class="c11"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c4 {
  padding: 2rem;
}

.c19 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c21 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c15 {
  position: relative;
}

.c17 {
  height: 0;
}

.c18 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c22 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c24 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c23 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c25 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c14 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c9 {
  display: none;
}

.c16 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c11 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c13 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c19 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c21 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c22 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c24 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c25 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c9 {
    display: inherit;
  }
}

<div>
  <a
    aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
    class="c0 c1"
    href="/blog/mndyd8"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        <div
          aria-hidden="true"
          class="c5"
        >
          <div
            class="c6 date container"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="c9"
            >
              <span
                class="c8"
              >
                23-30
              </span>
            </div>
            <div
              class="c9"
            >
              <span
                class="c8"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="c10"
          >
            <h1
              class="c11"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="c12"
            >
              <div
                class=""
              >
                <span
                  class="c13"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="c14"
          >
            <div
              class="c15 c16"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="c17"
                style="padding-bottom: 100%;"
              >
                <div
                  class="c18"
                >
                  <div
                    class="c19 c20"
                  >
                    <div
                      class="c21"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="c22"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c23"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="c24"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c25"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c4 {
  padding: 2rem;
}

.c19 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c21 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c15 {
  position: relative;
}

.c17 {
  height: 0;
}

.c18 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c22 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c24 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c23 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c25 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c14 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c9 {
  display: none;
}

.c16 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c11 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c13 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c19 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c21 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c22 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c24 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c25 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c9 {
    display: inherit;
  }
}

<div>
  <a
    aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
    class="c0 c1"
    href="/blog/zxywvuts"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        <div
          aria-hidden="true"
          class="c5"
        >
          <div
            class="c6 date container"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="c9"
            >
              <span
                class="c8"
              >
                23-30
              </span>
            </div>
            <div
              class="c9"
            >
              <span
                class="c8"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="c10"
          >
            <h1
              class="c11"
            >
              St Ives  2018
            </h1>
            <div
              class="c12"
            >
              <div
                class=""
              >
                <span
                  class="c13"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="c14"
          >
            <div
              class="c15 c16"
            >
              <style>
                
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
              </style>
              <div
                class="c17"
                style="padding-bottom: 100%;"
              >
                <div
                  class="c18"
                >
                  <div
                    class="c19 c20"
                  >
                    <div
                      class="c21"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="c22"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c23"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="c24"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="c25"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c2 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c3 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c4 {
  padding: 2rem;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c9 {
  display: none;
}

.c11 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c8 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c3 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c7 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c9 {
    display: inherit;
  }
}

<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="c0 c1 test-custom-classname"
    href="/blog/asdfg"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      />
      <div
        class="c4"
      >
        <div
          aria-hidden="true"
          class="c5"
        >
          <div
            class="c6 date container"
          >
            <div
              class="c7"
            >
              <span
                class="c8"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="c9"
            >
              <span
                class="c8"
              >
                NaN
              </span>
            </div>
            <div
              class="c9"
            >
              <span
                class="c8"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="c10"
          >
            <h1
              class="c11"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c3 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c4 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c5 {
  padding: 2rem;
}

.c20 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c22 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c16 {
  position: relative;
}

.c18 {
  height: 0;
}

.c19 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c23 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c25 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c24 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c26 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c7 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c15 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c10 {
  display: none;
}

.c17 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c12 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c9 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c14 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

.c2 {
  display: inline-block;
  width: 100%;
  margin-bottom: 2rem;
  box-sizing: border-box;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c20 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c22 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c25 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c24 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c26 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c11 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    display: inherit;
  }
}

<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="c0 c1 c2"
      href="/blog/asdfg"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <div
              class="c7 date container"
            >
              <div
                class="c8"
              >
                <span
                  class="c9"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  NaN
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="c11"
            >
              <h1
                class="c12"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="c0 c1 c2"
      href="/blog/zxywvuts"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <div
              class="c7 date container"
            >
              <div
                class="c8"
              >
                <span
                  class="c9"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  23-30
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="c11"
            >
              <h1
                class="c12"
              >
                St Ives  2018
              </h1>
              <div
                class="c13"
              >
                <div
                  class=""
                >
                  <span
                    class="c14"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="c15"
            >
              <div
                class="c16 c17"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="c18"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="c19"
                  >
                    <div
                      class="c20 c21"
                    >
                      <div
                        class="c22"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="c23"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c24"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="c25"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c26"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="c0 c1 c2"
      href="/blog/mndyd8"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <div
              class="c7 date container"
            >
              <div
                class="c8"
              >
                <span
                  class="c9"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  23-30
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="c11"
            >
              <h1
                class="c12"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="c13"
              >
                <div
                  class=""
                >
                  <span
                    class="c14"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="c15"
            >
              <div
                class="c16 c17"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="c18"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="c19"
                  >
                    <div
                      class="c20 c21"
                    >
                      <div
                        class="c22"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="c23"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c24"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="c25"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c26"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c3 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c4 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c5 {
  padding: 2rem;
}

.c20 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c22 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c16 {
  position: relative;
}

.c18 {
  height: 0;
}

.c19 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c23 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c25 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c24 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c26 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c7 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c15 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c10 {
  display: none;
}

.c17 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c12 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c9 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c14 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

.c2 {
  display: inline-block;
  width: 100%;
  margin-bottom: 2rem;
  box-sizing: border-box;
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c20 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c22 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c25 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c24 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c26 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c11 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    display: inherit;
  }
}

<div>
  <div
    class="test-custom-classname"
  >
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="c0 c1 c2"
      href="/blog/asdfg"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <div
              class="c7 date container"
            >
              <div
                class="c8"
              >
                <span
                  class="c9"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  NaN
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="c11"
            >
              <h1
                class="c12"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="c0 c1 c2"
      href="/blog/zxywvuts"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <div
              class="c7 date container"
            >
              <div
                class="c8"
              >
                <span
                  class="c9"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  23-30
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="c11"
            >
              <h1
                class="c12"
              >
                St Ives  2018
              </h1>
              <div
                class="c13"
              >
                <div
                  class=""
                >
                  <span
                    class="c14"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="c15"
            >
              <div
                class="c16 c17"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="c18"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="c19"
                  >
                    <div
                      class="c20 c21"
                    >
                      <div
                        class="c22"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="c23"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c24"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="c25"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c26"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="c0 c1 c2"
      href="/blog/mndyd8"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <div
              class="c7 date container"
            >
              <div
                class="c8"
              >
                <span
                  class="c9"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  23-30
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="c11"
            >
              <h1
                class="c12"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="c13"
              >
                <div
                  class=""
                >
                  <span
                    class="c14"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="c15"
            >
              <div
                class="c16 c17"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="c18"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="c19"
                  >
                    <div
                      class="c20 c21"
                    >
                      <div
                        class="c22"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="c23"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c24"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="c25"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c26"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
.c13 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #E02626;
  color: white;
}

.c13:focus-within,
.c13:focus {
  outline: none !important;
}

.c13:focus-within::after,
.c13:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c13:focus,
.c13:hover {
  background-color: #BA2020;
  color: white;
}

.c13:active {
  background-color: #9F1717;
}

.c13:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c30 {
  position: relative;
  min-width: 5rem;
  padding: 0.43rem 1.125rem 0.32rem 1.125rem;
  -webkit-transition: filter 0.3s;
  transition: filter 0.3s;
  border: none;
  border-radius: 0.25rem;
  font-size: 1.4rem;
  font-weight: bold;
  cursor: pointer;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #E02626;
  color: white;
  cursor: default;
}

.c30:focus-within,
.c30:focus {
  outline: none !important;
}

.c30:focus-within::after,
.c30:focus::after {
  position: absolute;
  top: -0.35rem;
  right: -0.35rem;
  bottom: -0.35rem;
  left: -0.35rem;
  content: '';
  display: block;
  border: solid rgba(0,125,250,0.6) 0.2rem;
  border-radius: 0.5rem;
  pointer-events: none;
}

.c30:focus,
.c30:hover {
  background-color: #BA2020;
  color: white;
}

.c30:active {
  background-color: #9F1717;
}

.c30:disabled {
  background-color: #cdcdd7;
  color: rgb(100,100,100);
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  position: relative;
  display: inline-block;
  z-index: 1;
  width: 100%;
  padding: 0;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.35rem;
  background: none;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: 0.2rem 0.2rem 0.5rem 0 rgba(37,32,31,0.3);
  cursor: pointer;
  box-sizing: border-box;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
.c0:not(:disabled):active,.c0:not(:disabled):hover {
  box-shadow: 0.4rem 0.4rem 1rem 0 rgba(37,32,31,0.3);
}

.c3 {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 0.35rem;
  overflow: hidden;
}

.c4 {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: calc(100% + 2rem);
  height: calc(100% + 2rem);
  margin-top: -1rem;
  margin-left: -1rem;
  background-color: white;
  background-position: center;
  background-size: cover;
}

.c5 {
  padding: 2rem;
}

.c23 {
  position: relative;
  width: 100%;
  border-radius: 0.25rem;
  background-color: rgb(238,238,238);
  overflow: hidden;
}

.c25 {
  position: absolute;
  top: 0;
  width: 13rem;
  height: 100vh;
  background-image: linear-gradient( 90deg, rgb(238,238,238), rgb(245,245,245), rgb(238,238,238) );
  background-repeat: no-repeat;
  background-size: 12.5rem 100%;
  -webkit-animation: sjjMW 3.5s ease-in-out infinite;
  animation: sjjMW 3.5s ease-in-out infinite;
}

.c19 {
  position: relative;
}

.c21 {
  height: 0;
}

.c22 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c24 {
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c26 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
}

.c28 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
}

.c27 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  opacity: 0;
  display: none;
}

.c29 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: opacity ease-in-out 0.4s;
  transition: opacity ease-in-out 0.4s;
  display: none;
}

.c1 {
  color: #1e1e1e;
}

.c1:focus,
.c1:active,
.c1:hover {
  color: #44aeff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c7 {
  position: relative;
  z-index: 3;
  border-radius: 0.35rem;
  overflow: hidden;
  box-sizing: border-box;
  width: 6.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 3;
  min-width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  text-align: center;
}

.c18 {
  display: block;
  z-index: 3;
  width: 6rem;
  height: 6rem;
  justify-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border-radius: 50rem;
  background-position: center;
  background-size: cover;
  overflow: hidden;
}

.c10 {
  display: none;
}

.c20 {
  z-index: 3;
  width: 100%;
  height: 100%;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: children;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
  -webkit-text-decoration-color: transparent !important;
  text-decoration-color: transparent !important;
  -webkit-text-decoration-line: none !important;
  text-decoration-line: none !important;
}

.c12 {
  margin: 0;
  font-size: 2.2rem;
  font-weight: bold;
}

.c9 {
  margin: 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.c17 {
  position: relative;
  top: 0.15rem;
  height: 1rem;
  padding: 0.17rem 0.4rem 0.27rem;
  -webkit-transition: all 0.4s;
  transition: all 0.4s;
  border: none;
  border-radius: 0.2rem;
  color: white;
  font-size: 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  background-color: #01579b;
}

.c2 {
  display: inline-block;
  width: 100%;
  margin-bottom: 2rem;
  box-sizing: border-box;
  margin-bottom: 0.5rem;
}

.c14 {
  margin-bottom: 2rem;
  box-sizing: border-box;
}

@media (prefers-color-scheme:dark) {
  .c13:focus-within::after,
  .c13:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c13 {
    background-color: #CA2020;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c13:focus,
  .c13:hover {
    background-color: #891111;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c13:active {
    background-color: #730D0D;
  }
}

@media (prefers-color-scheme:dark) {
  .c13:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (prefers-color-scheme:dark) {
  .c30:focus-within::after,
  .c30:focus::after {
    border-color: rgba(0,125,250,0.6);
  }
}

@media (prefers-color-scheme:dark) {
  .c30 {
    background-color: #CA2020;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c30:focus,
  .c30:hover {
    background-color: #891111;
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c30:active {
    background-color: #730D0D;
  }
}

@media (prefers-color-scheme:dark) {
  .c30:disabled {
    background-color: rgb(89,89,89);
    color: darkgray;
  }
}

@media (prefers-color-scheme:dark) {
  .c0 {
    box-shadow: 0.44rem 0.44rem 1rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c0:not(:disabled):focus,.c0:not(:disabled):focus-within,
  .c0:not(:disabled):active,.c0:not(:disabled):hover {
    box-shadow: 0.2rem 0.2rem 0.5rem 0 transparent;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    background-color: #1e1e1e;
  }
}

@media (prefers-color-scheme:dark) {
  .c23 {
    background-color: rgb(17,17,17);
  }
}

@media (prefers-color-scheme:dark) {
  .c25 {
    background-image: linear-gradient( 90deg, rgb(17,17,17), rgb(50,50,50), rgb(17,17,17) );
  }
}

@media (prefers-color-scheme:dark) {
  .c26 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c28 {
    display: none;
  }
}

@media (prefers-color-scheme:dark) {
  .c27 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c29 {
    display: unset;
  }
}

@media (prefers-color-scheme:dark) {
  .c1 {
    color: white;
  }
}

@media (prefers-color-scheme:dark) {
  .c1:focus,
  .c1:active,
  .c1:hover {
    color: #44aeff;
  }
}

@media (min-width:32.25rem) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:32.25rem) {
  .c11 {
    min-width: 10rem;
    text-align: unset;
  }
}

@media (min-width:32.25rem) {
  .c8 {
    display: none;
  }
}

@media (min-width:32.25rem) {
  .c10 {
    display: inherit;
  }
}

<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="c0 c1 c2"
      href="/blog/asdfg"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <div
              class="c7 date container"
            >
              <div
                class="c8"
              >
                <span
                  class="c9"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  NaN
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="c11"
            >
              <h1
                class="c12"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="c13 c14"
      type="button"
    >
      <span
        class="c15"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="c0 c1 c2"
      href="/blog/zxywvuts"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <div
              class="c7 date container"
            >
              <div
                class="c8"
              >
                <span
                  class="c9"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  23-30
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="c11"
            >
              <h1
                class="c12"
              >
                St Ives  2018
              </h1>
              <div
                class="c16"
              >
                <div
                  class=""
                >
                  <span
                    class="c17"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="c18"
            >
              <div
                class="c19 c20"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="c21"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="c22"
                  >
                    <div
                      class="c23 c24"
                    >
                      <div
                        class="c25"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="c26"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c27"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="c28"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c29"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="c13 c14"
      type="button"
    >
      <span
        class="c15"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="c0 c1 c2"
      href="/blog/mndyd8"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        />
        <div
          class="c5"
        >
          <div
            aria-hidden="true"
            class="c6"
          >
            <div
              class="c7 date container"
            >
              <div
                class="c8"
              >
                <span
                  class="c9"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  23-30
                </span>
              </div>
              <div
                class="c10"
              >
                <span
                  class="c9"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="c11"
            >
              <h1
                class="c12"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="c16"
              >
                <div
                  class=""
                >
                  <span
                    class="c17"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="c18"
            >
              <div
                class="c19 c20"
              >
                <style>
                  
          .js .gg-image__img--hide-js {display: none;}
          .no-js .gg-image__img--hide-no-js {display: none;}
        
                </style>
                <div
                  class="c21"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="c22"
                  >
                    <div
                      class="c23 c24"
                    >
                      <div
                        class="c25"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="c26"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c27"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="c28"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="c29"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="c30 c14"
      disabled=""
      type="button"
    >
      <span
        class="c15"
      >
        Delete blog
      </span>
    </button>
  </div>
</div>
`;
